--- a/README
+++ b/README
@@ -1,14 +1,14 @@
-README
-------
+# README
 
-FAST (Finally A Sddp Toolbox), an sddp toolbox written in Matlab
+FAST (Finally An Sddp Toolbox), an sddp toolbox written in Matlab
 
-src contains sources
-examples contains example to learn how to use the toolbox
-demo contains informations
+- `src` contains sources files.
+- `demo` contains one well explained demo.
+- `examples` contains examples to learn how to use the toolbox.
+- `tests` containes the tests. Used for development purposes only.
 
-See LICENSE for the license, and INSTALL for installation instructions
+See `LICENSE` for the license, and `INSTALL` for installation instructions
 
-See the toolbox website, currently hosted at http://baemerick.be/fast/
+See the toolbox website, currently hosted at (http://baemerick.be/fast/)
 
-Authors: Leopold Cambier and Damien Scieur
+Authors: [Leopold Cambier](https://people.stanford.edu/lcambier) and Damien Scieur
